z-index fix

--- a/static/wordstyle.css
+++ b/static/wordstyle.css
@@ -52,6 +52,7 @@ footer a {
   position: relative;
   width: 25%;
   left: 90%;
+  z-index: -1;
 }
 
 .wordbox {
